# historical_city_populations

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
historical_city_populations/: __init__.py  dataset.py  features.py  plots.py
historical_city_populations/modeling/: predict.py  train.py
notebooks/: layout_parser_pipeline.ipynb  paddle_ocr_pipeline.ipynb
